# rustwasm-worker-template

./: .gitignore  Cargo.toml  README.md  index.js  package.json  webpack.config.js  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-release.yml
src/: lib.rs
worker/: worker.js
